--- a/dashboard.html
+++ b/dashboard.html
@@ -203,7 +203,7 @@
         <div id="chat" class="card z-depth-3">
           <ul id="translate-panel" class="collapsible" data-collapsible="accordion">
               <li>
-                  <div class="collapsible-header"><span style="color:red;" class="translate">Translate Tool</span><i class="material-icons" style="color:red;">compare_arrows</i></div>
+                  <div class="collapsible-header"><span style="color:red;">Translate Tool</span><span class="translate"><i class="material-icons" style="color:red;">compare_arrows</i></span></div>
                   <div class="collapsible-body">
                     <span class="translate">
                       <div class="row">
@@ -235,11 +235,27 @@
                       </div>
                       <button id="translateSourceTextButton" class="btn waves-light waves-effect red lighten-1 col s12 m12 l12">
                           <span class="translate">Translate</span>
-                          <i class="material-icons right">translate</i>
+                          <!-- <i class="material-icons right">translate</i> -->
                       </button>
                       <div class="row">
                           <span class="notranslate"><p id="translatedText" class="col s12 m12 l12"></p></span>
                       </div>
+                  </div>
+              </li>
+          </ul>
+
+          <ul id="special-characters-panel" class="collapsible" data-collapsible="accordion">
+              <li>
+                  <div class="collapsible-header"><span style="color:red;">Special Characters</span><span class="notranslate"><i class="material-icons" style="color:red;">translate</i></span></div>
+                  <div class="collapsible-body">
+
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">á</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">é</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">í</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ó</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ú</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">ñ</a>
+
                   </div>
               </li>
           </ul>
@@ -324,6 +340,8 @@
     <script src="scripts/bind-messages.js"></script>
     <script src="scripts/add-conversation.js"></script>
     <script src="scripts/bind-translate.js"></script>
+    <script src="scripts/bind-special-character-tool.js"></script>
+
 
     <script>
         // console.log("select "+document.getElementById('my-cool-select').style.display+" ?");
